# poker-auction-mcp

./: .gitignore  README.md  pyproject.toml
src/poker_auction_mcp/: playbook.md  rules.md  server.py
