[project]
name = "poker-auction-mcp"
version = "0.1.0"
description = "MCP server that lets an AI agent play the poker-auction game as a player."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "python-socketio[asyncio_client]>=5.11.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
poker-auction-mcp = "poker_auction_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poker_auction_mcp"]
